clear wrote code with comment

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
 
      <!-- =============================================================================== -->
-    <!-- =====================================  section   =============================== -->
+    <!-- =====================================  Section   =============================== -->
     <!-- =============================================================================== -->
     <section>
         <div class="Section_details flex justify-between p-5 w-100 bg-black text-white">
@@ -63,11 +63,11 @@
         </div>
     </section>
     <hr />
-    <!-- =====================================  End of section   =============================== -->
+    <!-- =====================================  End of Section   =============================== -->
 
 
      <!-- =============================================================================== -->
-    <!-- =====================================  about    =============================== -->
+    <!-- =====================================  About    =============================== -->
     <!-- =============================================================================== -->
     <!-- For about section -->
     <article id="about">
@@ -92,7 +92,7 @@
             </div>
         </div>
     </article>
-    <!-- =====================================  End of about   =============================== -->
+    <!-- =====================================  End of About   =============================== -->
 
 
 
