--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
     <!-- =============================================================================== -->
     <!-- =====================================  Footer   =============================== -->
     <!-- =============================================================================== -->
-    <footer class="bg-black text-gray-200 p-20 pb-10 text-lg">
+    <footer class="bg-black text-gray-200 p-10 md:p-20 pb-10 text-lg">
         <div class="footer flex flex-row">
             <div class="footer_content w-1/2 ">
                 <p>
@@ -382,7 +382,7 @@
                 </div>
 
             </div>
-            <div class="footer_icons w-1/2 flex pl-5">
+            <div class="footer_icons w-1/2  pl-5">
                 <a href="https://www.facebook.com/meshv.patel.104" class="fa footer_icon fa-facebook "></a>
                 <a href="https://twitter.com/MeshvPatel18?s=08" class="fa footer_icon fa-twitter"></a>
                 <a href="https://www.instagram.com/invites/contact/?i=1p80x3x2jczsl&utm_content=h4ixkzf"
